# log-ai

./: .env.example  .gitignore  AGENTS.md  HOWTO_WSL.md  IMPLEMENTATION.md  LICENSE  QUICKSTART.md  README.md  VSCODE_SETUP.md  pyproject.toml  test_apm_mapping.py
.ai/mcp/: mcp.json
config/: .env.example  env.sh  services.yaml  services.yaml.example
docs/: INDEX.md  QUICKSTART.md  QUICK_REFERENCE.md  SENTRY_PER_SERVICE_DSN.md  log-search-result-example.json
docs/guides/: FETCH_SENTRY_DSNS_GUIDE.md  VSCODE_SETUP.md
scripts/: create_dummy_logs.py  debug_sentry_config.py  demo_datadog_tools.py  demo_service_resolution.py  deploy.sh  restore_sentry_dsns.py  start.sh  test_config_loader.py  test_date_parsing.py  test_deployed_tools.py  test_implementation.sh  test_mcp_server.py  test_new_datadog_tools.py  test_oom_search.py  test_redis_coordinator.py  validate_production_tools.py  validate_resolution.py  validate_sentry_mapping.py
scripts/tools/: add_sentry_dsns.py  (+4 more)
src/: agent.py  client.py  config.py  config_loader.py  datadog_integration.py  datadog_log_handler.py  infrastructure_monitoring.py  metrics_collector.py  redis_coordinator.py  sentry_integration.py  server.py
tests/: conftest.py  test_config_loader.py  test_datadog_env_filtering.py  test_datadog_integration.py  test_datadog_monitors_events.py  test_date_functions.py  test_date_parsing.py  test_exact_params.py  test_mcp_server.py  test_oom_search.py  test_phase3_2_apm_tracing.py  test_phase3_3_metrics_collection.py  test_phase3_4_infrastructure_monitoring.py  test_phase3_5_log_aggregation.py  test_phase3_6_datadog_queries.py  test_query_flow.py  test_redis_coordinator.py  test_search_simple.py  test_sentry_api.py  test_service_resolution.py  test_utc_timestamps.py
(+26 files in other folders)
